# advent-of-code-2024

./: .gitignore  CMakeLists.txt  README.md
day01-part1/: main.cpp
day01-part2/: main.cpp
day02-part1/: main.cpp
day02-part2/: main.cpp
day03-part1/: main.cpp
day03-part2/: main.cpp
day04-part1/: main.cpp
day04-part2/: main.cpp
day05-part1/: main.cpp
day05-part2/: main.cpp
day06-part1/: main.cpp
day06-part2/: main.cpp
day07-part1/: main.cpp
day07-part2/: main.cpp
day08-part1/: main.cpp
day08-part2/: main.cpp
day09-part1/: main.cpp
day09-part2/: main.cpp
day1-part1/: main.cpp
day1-part2/: main.cpp
day10-part1/: main.cpp
day10-part2/: main.cpp
day11-part1/: main.cpp
day11-part2/: main.cpp
day12-part1/: main.cpp
day12-part2/: main.cpp
day13-part1/: main.cpp  math.md
day13-part2/: main.cpp
day14-part1/: main.cpp
day14-part2/: main.cpp
day15-part1/: main.cpp
day15-part2/: main.cpp
day16-part1/: main.cpp
day16-part2/: main.cpp
day17-part1/: main.cpp  test.txt
day17-part2/: main.cpp
day18-part1/: main.cpp
day18-part2/: main.cpp
day19-part1/: main.cpp
day19-part2/: main.cpp
day2-part1/: main.cpp
day2-part2/: main.cpp
day20-part1/: main.cpp
day20-part2/: main.cpp
day21-part1/: main.cpp
day21-part2/: main.cpp
day22-part1/: main.cpp
day22-part2/: main.cpp
day23-part1/: main.cpp
day23-part2/: main.cpp
day24-part1/: main.cpp
day24-part2/: main.cpp
day25-part1/: main.cpp
day3-part1/: main.cpp
day3-part2/: main.cpp
day4-part1/: main.cpp
day4-part2/: main.cpp
day5-part1/: main.cpp
day5-part2/: main.cpp
day6-part1/: main.cpp
day6-part2/: main.cpp
day7-part1/: main.cpp
day7-part2/: main.cpp
day8-part1/: main.cpp
day8-part2/: main.cpp
day9-part1/: main.cpp
day9-part2/: main.cpp
