cmake_minimum_required(VERSION 3.25)
project(advent_of_code_2024)

set(CMAKE_CXX_STANDARD 23)

option(BENCHMARK "Enable benchmarking" OFF)
if (BENCHMARK)
    add_compile_definitions(BENCHMARK)
endif ()

if (WIN32)
    if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static -stdlib=libc++ -lc++abi")
    elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static -static-libgcc -static-libstdc++")
    endif ()
endif ()

add_executable(day01-part1 day01-part1/main.cpp)
add_executable(day01-part2 day01-part2/main.cpp)
add_executable(day02-part1 day02-part1/main.cpp)
add_executable(day02-part2 day02-part2/main.cpp)
add_executable(day03-part1 day03-part1/main.cpp)
add_executable(day03-part2 day03-part2/main.cpp)
add_executable(day04-part1 day04-part1/main.cpp)
add_executable(day04-part2 day04-part2/main.cpp)
add_executable(day05-part1 day05-part1/main.cpp)
add_executable(day05-part2 day05-part2/main.cpp)
add_executable(day06-part1 day06-part1/main.cpp)
add_executable(day06-part2 day06-part2/main.cpp)
add_executable(day07-part1 day07-part1/main.cpp)
add_executable(day07-part2 day07-part2/main.cpp)
add_executable(day08-part1 day08-part1/main.cpp)
add_executable(day08-part2 day08-part2/main.cpp)
add_executable(day09-part1 day09-part1/main.cpp)
add_executable(day09-part2 day09-part2/main.cpp)
add_executable(day10-part1 day10-part1/main.cpp)
add_executable(day10-part2 day10-part2/main.cpp)
add_executable(day11-part1 day11-part1/main.cpp)
add_executable(day11-part2 day11-part2/main.cpp)
add_executable(day12-part1 day12-part1/main.cpp)
add_executable(day12-part2 day12-part2/main.cpp)
add_executable(day13-part1 day13-part1/main.cpp)
add_executable(day13-part2 day13-part2/main.cpp)
add_executable(day14-part1 day14-part1/main.cpp)
add_executable(day14-part2 day14-part2/main.cpp)
add_executable(day15-part1 day15-part1/main.cpp)
add_executable(day15-part2 day15-part2/main.cpp)
add_executable(day16-part1 day16-part1/main.cpp)
add_executable(day16-part2 day16-part2/main.cpp)
add_executable(day17-part1 day17-part1/main.cpp)
add_executable(day17-part2 day17-part2/main.cpp)
add_executable(day18-part1 day18-part1/main.cpp)
add_executable(day18-part2 day18-part2/main.cpp)
add_executable(day19-part1 day19-part1/main.cpp)
add_executable(day19-part2 day19-part2/main.cpp)
add_executable(day20-part1 day20-part1/main.cpp)
add_executable(day20-part2 day20-part2/main.cpp)
add_executable(day21-part1 day21-part1/main.cpp)